boost (1.33.1-3) unstable; urgency=low

  * Fixed licensing of Graph library (closes: #349209).
    Patch from upstream CVS repository, courtesy of Doug Gregor.
  * Fixed build of Boost.Graph library (closes: #326089).

 -- Domenico Andreoli <cavok@debian.org>  Thu, 16 Mar 2006 13:40:06 +0100

boost (1.33.1-2) unstable; urgency=low

  [ Christophe Prud'homme ]
  * Bug fix: "libboost-wave-dev: Dependency on libboost-filesystem-dev
    missing", thanks to Martin v . LÃÂ¶wis (Closes: #346367).

  [ Domenico Andreoli ]
  * boost/graph/topological_sort.hpp: removed name of unused parameter
    to prevent long compiler warning.  Closes: #347519.
  * Applied patch from upstream CVS to fix parsing of valid options
    with a common root.  Closes: #345714.
  * libboost-python-dev now correctly depends on python2.4-dev.

 -- Domenico Andreoli <cavok@debian.org>  Wed, 11 Jan 2006 11:11:42 +0100

boost (1.33.1-1) experimental; urgency=low

  * New upstream release.

  * debian/control, debian/rules: switched to python 2.4.

  * debian/control: removed build dependency on g++ 3.4.  Closes: #342958.

 -- Domenico Andreoli <cavok@debian.org>  Mon, 12 Dec 2005 17:44:36 +0100

boost (1.33.0-5) unstable; urgency=low

  * Re-uploaded with the right maintainer, the Debian Boost Team.

 -- Domenico Andreoli <cavok@debian.org>  Mon, 21 Nov 2005 16:49:41 +0100

boost (1.33.0-4) unstable; urgency=low

  * debian/control, debian/rules: renamed DSO packages to '*c2a'.
    Closes: #339154.

 -- Christophe Prud'homme <prudhomm@debian.org>  Mon, 21 Nov 2005 07:05:58 +0100

boost (1.33.0-3) unstable; urgency=low

  * debian/documentation-files: regenerate.

  * Applied patch from 1.33.1 to unbreak ublas.

  * Applied patch from 1.33.1 to unbreak is_incrementable with g++ 4.0.2.

  * Applied patch to remove warnings when compiling ublas with -Wall,
    patch sent upstream.

  * Single-threaded libraries are provided as well, thanks to Waba.
    Closes: #335594.
